gccida/c3/dw2_asm_output_encoded_addr_rtx
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dw2_asm_output_encoded_addr_rtx/src/dwarf2asm.c:1353:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)v4->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dw2_asm_output_encoded_addr_rtx/src/dwarf2asm.c:1368:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dw2_asm_output_encoded_addr_rtx/src/dwarf2asm.c:1378:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)v15->fld[0]; 
                       ^~~~~~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dw2_asm_output_encoded_addr_rtx/src/obj/dwarf2asm.o] Error 1
